# kicad-libraries

./: .gitignore  .gitmodules  MCU_SIFLI.kicad_sym  README-zh.md  README.md  metadata.json  pyproject.toml
.github/workflows/: release.yml
docs/: maintainers.md  modules.md  silicon-schema.md
footprint/: grid_array_bga.yml  no_lead_qfn.yml
footprints/SiFli_MOD.pretty/: SF32LB52‐MOD‐1.kicad_mod
module-footprints/: README.md
module-footprints/SiFli_MOD.pretty/: SF32LB52-MOD-1.kicad_mod  SF32LB56-MOD.kicad_mod  SF32LB58-MOD.kicad_mod
modules/SF32LB52-MOD-1/: footprint.yml  module.yml  pins.yml
modules/SF32LB56-MOD/: footprint.yml  module.yml  pins.yml
modules/SF32LB58-MOD/: footprint.yml  module.yml  pins.yml
scripts/: build_release.py
src/kicad_generator/: __init__.py  cli.py  config.py  footprint_loader.py  footprints.py  module_footprints.py  module_loader.py  runner.py  schema_loader.py  symbols.py  upstream.py
symbols/: MCU_SiFli.kicad_sym
templates/sys/: SF32LB52-MOD-1__SF32LB52-MOD-1.kicad_sym  SF32LB52_X.kicad_sym  SF32LB52x.kicad_sym  SF32LB52x_bak.kicad_sym  SF32LB56-MOD__SF32LB56-MOD.kicad_sym  SF32LB56x.kicad_sym  SF32LB56x__SF32LB560UNN26.kicad_sym  SF32LB56x__SF32LB561UBN26.kicad_sym  SF32LB56x__SF32LB565.kicad_sym  SF32LB58-MOD__SF32LB58-MOD.kicad_sym  SF32LB58x.kicad_sym  SF32LB58x__SF32LB583VCC36.kicad_sym
tests/: test_modules.py  test_sifli_bga.py  test_symbol_layout_rules.py  test_symbols_sys_subsystem_split.py  test_sys_template_export.py
